@@ -70,6 +70,7 @@ void Init_native()
   init_xslt_stylesheet();
   init_xml_syntax_error();
   init_html_entity_lookup();
+  init_html_element_description();
   init_xml_schema();
   init_xml_relax_ng();
 }
