@@ -91,6 +91,7 @@ int vasprintf (char **strp, const char *fmt, va_list ap);
 #include <xml_syntax_error.h>
 #include <xml_schema.h>
 #include <xml_relax_ng.h>
+#include <html_element_description.h>
 
 extern VALUE mNokogiri ;
 extern VALUE mNokogiriXml ;
