@@ -1,6 +1,7 @@
 require 'nokogiri/html/entity_lookup'
 require 'nokogiri/html/document'
 require 'nokogiri/html/sax/parser'
+require 'nokogiri/html/element_description'
 
 module Nokogiri
   class << self
